WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71821
Web Inspector: [Chromium] Call LowMemoryNotification instead of IdleNotification
https://bugs.webkit.org/show_bug.cgi?id=71821
Summary
Web Inspector: [Chromium] Call LowMemoryNotification instead of IdleNotifica...
Ulan Degenbaev
Reported
2011-11-08 08:36:50 PST
The new GC fixes the LowMemoryNofication, so there is no need to repeatedly call the IdleNotification.
Attachments
Call LowMemoryNotification instead of IdleNotification.
(1.44 KB, patch)
2011-11-08 08:40 PST
,
Ulan Degenbaev
pfeldman
: review+
pfeldman
: commit-queue-
Details
Formatted Diff
Diff
Rebased patch
(1.42 KB, patch)
2011-12-15 03:03 PST
,
Ulan Degenbaev
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ulan Degenbaev
Comment 1
2011-11-08 08:40:03 PST
Created
attachment 114081
[details]
Call LowMemoryNotification instead of IdleNotification.
Pavel Feldman
Comment 2
2011-11-08 08:57:49 PST
Comment on
attachment 114081
[details]
Call LowMemoryNotification instead of IdleNotification. Please do not land this for a few days (until the v8 roll sticks). Thanks!
Ulan Degenbaev
Comment 3
2011-12-15 03:03:31 PST
Created
attachment 119405
[details]
Rebased patch I am setting the commit-queue to "+", since the previous version of the patch was already reviewed, and the new version only differs in Changelog dates.
WebKit Review Bot
Comment 4
2011-12-15 03:04:15 PST
Comment on
attachment 119405
[details]
Rebased patch Rejecting
attachment 119405
[details]
from review queue.
ulan@chromium.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 5
2011-12-15 03:05:06 PST
Comment on
attachment 119405
[details]
Rebased patch Rejecting
attachment 119405
[details]
from commit-queue.
ulan@chromium.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Ulan Degenbaev
Comment 6
2011-12-15 03:08:54 PST
Pavel, could you please take a look and mark for commit-queue?
WebKit Review Bot
Comment 7
2011-12-15 07:36:30 PST
Comment on
attachment 119405
[details]
Rebased patch Clearing flags on attachment: 119405 Committed
r102936
: <
http://trac.webkit.org/changeset/102936
>
WebKit Review Bot
Comment 8
2011-12-15 07:36:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug