Web Inspector: [Chromium]  Call LowMemoryNotification instead of IdleNotification https://bugs.webkit.org/show_bug.cgi?id=71821

Patch by Ulan Degenbaev <ulan@chromium.org> on 2011-12-15
Reviewed by Yury Semikhatsky.

* Source/WebCore/bindings/v8/ScriptProfiler.cpp:

Canonical link: https://commits.webkit.org/91304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102936 268f45cc-cd09-0410-ab3c-d52691b4dbfc